--- a/app/src/main/res/layout/item_superhero.xml
+++ b/app/src/main/res/layout/item_superhero.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 
 
     <androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="16dp"
+    android:elevation="7dp"
+    app:cardCornerRadius="16dp">
+
+
+    <TextView
+        android:id="@+id/textViewSuper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="16dp">
+        android:text="@string/superhero"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:backgroundTint="@color/black"/>
 
 
     <ImageView
-        android:id="@+id/photoImageView"
+        android:id="@+id/superheroImageView"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nombre"
-        android:id="@+id/nameTextView"/>
-
-    </androidx.cardview.widget.CardView>
+        android:layout_height="match_parent" />
 
 
 
-</LinearLayout>
+
+
+
+
+
+
+</androidx.cardview.widget.CardView>
+
