--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="200dp"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="22dp"
+    app:cardElevation="8dp">
 
-
-
-    <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_margin="16dp"
-        android:elevation="7dp"
-        app:cardCornerRadius="16dp"
-        android:layout_marginTop="40dp"
-        tools:ignore="MissingConstraints">
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/superheroImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:contentDescription="IMAGE"/>
 
-    <TextView
-        android:id="@+id/textViewSuper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Biography"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:backgroundTint="@color/black"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom"
+            android:background="@color/superheroName">
 
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
+        </FrameLayout>
 
+    </FrameLayout>
 
-    </androidx.cardview.widget.CardView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
