--- a/app/src/main/res/layout/item_superhero.xml
+++ b/app/src/main/res/layout/item_superhero.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
-
-    <androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
     android:elevation="7dp"
-    app:cardCornerRadius="16dp">
+    app:cardCornerRadius="22dp"
+    app:cardElevation="8dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
-
-    <TextView
-        android:id="@+id/textViewSuper"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/superhero"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:backgroundTint="@color/black"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/superheroImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom"
+            android:background="@color/superheroName">
+
+            <TextView
+                android:id="@+id/textViewSuper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                tools:text="@string/superhero"
+                android:textSize="20sp" />
 
 
-    <ImageView
-        android:id="@+id/superheroImageView"
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        </FrameLayout>
 
-
-
-
-
-
-
+    </FrameLayout>
 
 
 </androidx.cardview.widget.CardView>
