--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="superheroName">#6F83EA77</color>
+    <color name="bussinessColor">#FFEB3B</color>
+    <color name="iniBackground">#A8EA2502</color>
 
 
 
